--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <html>
   <head>
+
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <title>5280 Landmarks</title>
+
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+
+
   </head>
   <body>
 
+
+    <header class="flex justify-between align-center" >
+        <div class="column"> 5280 Landmarks</div>
+        <div class="column" id="login"> Login</div>
+    </header>
+
+
+    <nav>
+      <div class="container flex justify-end align-center w-100 ">
+        <div class="column2">Background</div>
+        <div class="column2">Art</div>
+        <div class="column2">Featured</div>
+      </div>
+    </nav>
+
+
+  <div class="container flex" >
+
+    <div class="column3 relative">
+      <img src="images/1.jpg" alt="Denver Art Museum"
+        class="w-100">
+      <h1>Denver Art Museum</h1>
+      <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.
+        <br>
+          Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.
+        <br>
+          Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.
+        <br>
+          Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.
+      </p>
+    </div>
+
+    <div class="column4">
+      <div class="row3">Larimer Square</div>
+      <img src="images/2.jpg" alt="Larimer Square" class="w-100"  >
+      <div class="row4">Millenium Bridge</div>
+      <img src="images/5.jpg" alt="Millenium Bridge" class="w-100">
+      <div class="row5">Molly Brown house</div>
+      <img src="images/6.jpg" alt="Molly Brown House" class="w-100">
+    </div>
+
+  </div>
+
+
+    <footer>
+      Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus
+      comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens
+      suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta
+      sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla
+      qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta,
+      ancillae quaestio no quo, id vim blandit voluptatum.
+    </footer>
+
   </body>
 </html>
-
-
-
-
