--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <img src="images/1.jpg" alt="Denver Art Museum"
         class="w-100">
       <h1>Denver Art Museum</h1>
+      <br>
       <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.
         <br>
           Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.
@@ -58,7 +59,8 @@
 
     <footer>
       Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus
-      comprehensam. Mel te primis commodo, nibh labore nostrum ei mel. Ex vix adolescens
+      comprehensam. Mel te primis commodo, nibh labore
+      nostrum ei mel. Ex vix adolescens
       suscipiantur, malorum iuvaret usu id. At mea lobortis pertinacia, scripta
       sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla
       qualisque ea, vis malis clita efficiantur ut. At vel lorem paulo soluta,
